--- a/package.json
+++ b/package.json
@@ -8,8 +8,26 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^10.1.3",
+    "autoprefixer": "^10.2.5",
+    "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
+    "gray-matter": "^4.0.2",
     "next": "10.1.3",
+    "next-mdx-remote": "^2.1.4",
+    "next-optimized-images": "^2.6.2",
+    "postcss": "^8.2.10",
+    "prism-themes": "^1.6.0",
+    "prismjs": "^1.23.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remark-external-links": "^8.0.0",
+    "remark-prism": "^1.3.6",
+    "styled-components": "^5.2.3",
+    "tailwindcss": "^2.1.1"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.12.0"
   }
 }
